# bolt

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/commands/: list.rs  onboarding.rs  status.rs  switch.rs  ui.rs
ui/: eslint.config.js  package-lock.json  package.json
ui/src/: App.vue  style.css
ui/src/components/: BuildOutput.vue  ConfigView.vue  DrawerLocation.vue  DrawerPorts.vue  ErrorBanner.vue  LogsPanel.vue  ProjectActions.vue  ProjectCard.vue  ProjectDrawer.vue  ProjectsView.vue  ShellPanel.vue  SubdirControls.vue  TopBar.vue
ui/src/composables/: api.js  useEscapeKey.js  useProjectPolling.js  useProjectShellSession.js  useShell.js
ui/src/stores/: buildLogs.js  config.js  drawer.js  projects.js  ui.js
